syntax = "proto3";

package protos;

service Service {
  rpc CreateJob (CreateJobRequest) returns (CreateJobReply) {}
  rpc CancelJob (JobIdRequest) returns (SimpleCallReply) {}
  rpc GetJobs (EmptyRequest) returns (GetJobsReply) {}
  rpc GetJobStats (JobIdRequest) returns (GetJobStatsReply) {}
  rpc GetJobResult  (JobIdRequest) returns (GetJobResultReply) {}
}

message EmptyRequest {
}

message JobIdRequest {
    string jobId = 1;
}

message SimpleCallReply {
    CallStatus status = 1;
}

message CreateJobRequest {
    string label = 1;

    string store = 2;
    bytes storeParams = 3;

    string algorithm = 4;
    bytes algorithmParams = 5;

    double taskCPU = 6;
	double taskMEM = 7;
	int32 taskVertices = 8;
	int32 taskTimeoutSec = 9;
}

message CreateJobReply {
    CallStatus status = 1;
    string jobId = 2;
}

message GetJobStatsReply {
    CallStatus status = 1;
    Job job = 2;
    int32 superstep = 3;
}

message GetJobResultReply {
    CallStatus status = 1;
    bytes value = 2;
    string displayValue = 3;
}

message GetJobsReply {
    CallStatus status = 1;
    repeated Job jobs = 2; 
}

message Job {
    string id = 1;
    string label = 2;
    int64 creationTime = 3;
    JobStatus status = 4;    
}

enum JobStatus {
    Created = 0;
    Running = 1;
    Completed = 2;
    Cancelled = 3;
    Failed = 4;
}

enum CallStatus {        
    OK = 0;
    INTERNAL_ERROR = 1;
    ERROR_INVALID_JOB = 2;
    ERROR_INVALID_REQUEST = 3;
}
